# captiv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .roo_memory.yaml  .roorules  Dockerfile  Makefile  README.md  RELEASE.md  RUNPOD_INTEGRATION.md  TODO.md  docker-bake.hcl  entrypoint.sh  fake.txt  pyproject.toml
.github/workflows/: README.md  ci.yml
docker/: README.md
docker/config/: health-check.json  nginx-default.conf  runpod-welcome.txt  workspace-readme.md
src/captiv/: cli.py  config.py  logging.py
src/captiv/cli/: __init__.py  __main__.py  error_handling.py  options.py
src/captiv/gui/: __init__.py  main.py  styles.py  utils.py
src/captiv/models/: __init__.py  base_model.py  (+7 more)
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_caption_commands.py  test_cli_error_handling.py  test_config_commands.py  test_generate_command.py  test_main.py
tests/config/: test_config.py  test_config_section.py  test_generation_defaults.py  test_gui_defaults.py  test_system_defaults.py
tests/gui/: __init__.py  test_gui.py  test_logging.py  test_main.py  test_utils.py
tests/integration/: test_captioning_workflow.py
tests/models/: test_base_model.py  test_blip2_model.py  test_blip_model.py  test_git_model.py  test_joycaption_model.py  test_kosmos_model.py  test_siglip_model.py  test_utils.py  test_vit_gpt2_model.py
tests/services/: __init__.py  test_caption_file_manager.py  test_caption_manager.py  test_config_manager.py  test_file_manager.py  test_image_file_manager.py  test_model_manager.py
tests/utils/: gpu_mocks.py  test_error_handling.py
(+59 files in other folders)
